--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "tailwindcss": "^3.3.6",
     "trpc-sveltekit": "^3.5.22",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.3.3",
     "vite": "^5.0.3",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
@@ -48,6 +48,7 @@
   "type": "module",
   "dependencies": {
     "@skeletonlabs/tw-plugin": "^0.3.0",
+    "jsdiff": "^1.1.1",
     "svelte-fa": "^3.0.4"
   }
 }
